--- a/form.css
+++ b/form.css
@@ -1,8 +1,97 @@
 body{
-    background-color: black;
+    background: linear-gradient(black, rgb(32, 32, 255));
     color: white;
 }
 
+h1{
+    margin-right: 10px;
+    padding-top: 30px;
+}
+
+#para-paga{
+    margin-left: 30px;
+    padding-top: 5px;
+    font-size: 30px;
+}
+
 .container{
-    background-color: gray;
+    
+    background-color: rgb(53, 53, 196);
+    width: 68%;
+    height: 33em;
+    margin: 8em 13em;
+    border-radius: 10px;
+
+}
+
+.form{
+    gap: 20em;
+    margin-left: 2em;
+    padding-bottom: 40px;
+}
+
+input {
+     border-radius: 5px;
+     width: 45%;
+     height: 5vh;
+     border: 0 solid transparent;
+     display: left;
+     margin-bottom: 10px;
+     margin-left: 5px;
+}
+
+.conteudos{
+    margin-right: 40px;
+    padding-left: 60px;
+    display: flex;
+    gap: 30px;
+}
+
+.conteudo-primeiro{
+    text-align: center;
+    width: 30%;
+    background-color: rgb(12, 12, 122);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.conteudo-segundo{
+    text-align: center;
+    width: 30%;
+    background-color: rgb(12, 12, 122);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.conteudo-terceiro{
+    text-align: center;
+    width: 30%;
+    background-color:  rgb(12, 12, 122);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.conteudo-primeiro:hover{
+     transform: scale(1.1);
+}
+
+.conteudo-segundo:hover{
+     transform: scale(1.1);
+}
+
+.conteudo-terceiro:hover{
+     transform: scale(1.1);
+}
+
+#conteudo{
+    font-size: 20px;
+}
+
+#paragrafo{
+    font-size: 18px;
+}
+
+#conteudo-preco{
+    font-size: 25px;
+    color: rgb(255, 19, 19);
 }
